# pan-os-upgrade-web

./: .flake8  .gitignore  .yamllint  README.md  docker-compose.build.yaml  docker-compose.yml  flowchart.mmd  pan-os-upgrade-web.code-workspace  pyproject.toml  pyrightconfig.json  settings.json  tasks.py  tslint.json  workflows.md
.github/workflows/: backend.yml  build.yaml
.trunk/: trunk.yaml
backend/: .env  .env.example  Dockerfile  Dockerfile.multi  requirements.txt  start.sh
backend/accounts/: admin.py  forms.py  models.py
backend/django_project/: celery.py  settings.py  urls.py
backend/fixtures/: device.json  devicetype.json  firewall_platforms.json  firewalls.json  ha.json  inventory.json  inventory_devices.json  inventory_platforms.json  panorama_platforms.json  panoramas.json  platforms.json  profiles.json  settings.json  settings_profiles.json
backend/panosupgradeweb/: admin.py  apps.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
docs/mermaid/: upgrade_app_workflow.mermaid  upgrade_assign_device.mermaid  upgrade_assign_upgrade_devices.mermaid  upgrade_check_ha_compatibility.mermaid  upgrade_compare_versions.mermaid  upgrade_determine_upgrade.mermaid  (+12 more)
elasticsearch/: elasticsearch.yml
frontend/: .bazelignore  .eslintrc.json  .prettierrc  BUILD.bazel  Dockerfile  LICENSE  README.md  angular.json  firebase.json  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  replace_api_url.sh  scaffolding.html  tsconfig.json
k8s/: frontend-deployment.yaml  namespace.yaml
llm/: backend.md  frontend.md
(+494 files in other folders)
