[tool.poetry]
name = "pan_os_upgrade_web"
version = "0.0.1"
description = "Backend Django web server"
authors = ["Calvin Remsburg <cremsburg.dev@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.0.0,<4.1.0"
djangorestframework = "^3.14.0"
django-cors-headers = ">=3.10.0,<3.11.0"
whitenoise = "5.3.0"
gunicorn = ">=20.1.0,<20.2.0"
dj-rest-auth = "2.1.11"
django-allauth = ">=0.48.0,<0.49.0"
drf-spectacular = ">=0.24.0,<0.25.0"
environs = {version = ">=9.5.0,<9.6.0", extras = ["django"]}
psycopg2-binary = "^2.9.5"
pan-os-python = "^1.8.1"
celery = {extras = ["redis"], version = "^5.2.7"}
xmltodict = "^0.13.0"
get-certificate-chain = "^0.1.8"
pydantic = "^1.10.7"
pyyaml = "^6.0"
oauthlib = "^3.2.2"
requests-oauthlib = "^1.3.1"
requests = "^2.28.1"
cryptography = "^40.0.2"
panapi = {url = "https://github.com/cdot65/panapi/archive/refs/tags/v0.1.4.tar.gz"}
pyjwt = "2.7.0"
pandas = "^2.0.1"
sendgrid = "^6.10.0"
panos-upgrade-assurance = {url = "https://github.com/PaloAltoNetworks/pan-os-upgrade-assurance/archive/refs/tags/v0.0.1.tar.gz"}
openai = "^0.27.7"
invoke = "^2.1.2"
dynaconf = "^3.2.0"
defusedxml = "^0.7.1"
python-logstash-async = "^3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
ipdb = "^0.13.13"
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
